fix description not showing up

--- a/styles/image-gallery.css
+++ b/styles/image-gallery.css
@@ -345,6 +345,7 @@
 .image-gallery-slide {
   flex: 0 0 100%;
   min-width: 0;
+  position: relative;
   /* GPU acceleration for smooth swiping */
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
